Kubernetes/10_ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: webserver2
  namespace: schulung2
spec:
  rules:
    - host: localhost
      http:
        paths:
          - backend:
              service:
                name: webserver2
                port:
                  number: 80
            path: /
            pathType: Prefix
